Update Russian translations for various keys

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -39,7 +39,7 @@
     "noCredentials": "Нет учетных данных",
     "noCredentialsMessage": "Вы еще не добавили учетные данные. Нажмите «Добавить учетные данные», чтобы начать.",
     "sshCredentials": "Учетные данные SSH",
-    "credentialsCount": "{{count}} учетные данные",
+    "credentialsCount": "Учетных данных: {{count}}",
     "refresh": "Обновить",
     "passwordRequired": "Требуется пароль",
     "sshKeyRequired": "Требуется SSH-ключ.",
@@ -56,7 +56,7 @@
     "updateKey": "Ключ обновления",
     "keyPassword": "Ключ Пароль",
     "keyType": "Тип ключа",
-    "keyTypeRSA": "ЮАР",
+    "keyTypeRSA": "RSA",
     "keyTypeECDSA": "ECDSA",
     "keyTypeEd25519": "Ed25519",
     "basicInfo": "Основная информация",
@@ -125,7 +125,7 @@
     "timesUsed": "Количество использований",
     "lastUsed": "Последнее использование",
     "connectedHosts": "Подключенные хосты",
-    "created": "Созданный",
+    "created": "Создано",
     "lastModified": "Последнее изменение",
     "usageStatistics": "Статистика использования",
     "copiedToClipboard": "{{field}} скопировано в буфер обмена",
@@ -166,7 +166,7 @@
     "keyTypeDsa": "DSA (SSH)",
     "keyTypeRsaSha256": "RSA-SHA2-256",
     "keyTypeRsaSha512": "RSA-SHA2-512",
-    "keyPairGeneratedSuccessfully": "{{keyType}} пара ключей успешно сгенерирована",
+    "keyPairGeneratedSuccessfully": "Пара ключей {{keyType}} успешно сгенерирована",
     "failedToGenerateKeyPair": "Не удалось сгенерировать пару ключей.",
     "generateKeyPairNote": "Сгенерируйте новую пару SSH-ключей напрямую. Это заменит все существующие ключи в форме.",
     "invalidKey": "Недействительный ключ",
@@ -197,7 +197,7 @@
   "sshTools": {
     "title": "Инструменты SSH",
     "closeTools": "Закрыть инструменты SSH",
-    "keyRecording": "Ключевая запись",
+    "keyRecording": "Запись нажатий",
     "startKeyRecording": "Начать запись с нажатия клавиши",
     "stopKeyRecording": "Остановить запись нажатия клавиши",
     "selectTerminals": "Выберите терминалы:",
@@ -221,7 +221,7 @@
     "searchSnippets": "Поисковые фрагменты...",
     "name": "Имя",
     "description": "Описание",
-    "content": "Командование",
+    "content": "Команда",
     "namePlaceholder": "например, перезапустите Nginx.",
     "descriptionPlaceholder": "Дополнительное описание",
     "contentPlaceholder": "например, sudo systemctl restart nginx",
@@ -348,7 +348,7 @@
     "newVersionAvailable": "Доступна новая версия! Вы используете версию {{current}}, но доступна версия {{latest}}.",
     "releasedOn": "Выпущено 29 числа.",
     "downloadUpdate": "Скачать обновление",
-    "dismiss": "Увольнять",
+    "dismiss": "Закрыть",
     "checking": "Проверяем наличие обновлений...",
     "checkUpdates": "Проверьте наличие обновлений.",
     "checkingUpdates": "Проверяем наличие обновлений...",
@@ -364,7 +364,7 @@
     "offline": "Офлайн",
     "continue": "Продолжать",
     "maintenance": "Обслуживание",
-    "degraded": "Деградировавший",
+    "degraded": "Частичный отказ",
     "discord": "Discord",
     "error": "Ошибка",
     "warning": "Предупреждение",
@@ -423,7 +423,7 @@
     "confirmPassword": "Подтвердите пароль",
     "back": "Назад",
     "email": "Электронная почта",
-    "submit": "Представлять на рассмотрение",
+    "submit": "Отправить",
     "change": "Изменять",
     "save": "Сохранять",
     "saving": "Сохранение...",
@@ -436,7 +436,7 @@
     "no": "Нет",
     "ok": "ХОРОШО",
     "enabled": "Включено",
-    "disabled": "Неполноценный",
+    "disabled": "Отключено",
     "important": "Важный",
     "notEnabled": "Не включено",
     "settingUp": "Настройка...",
@@ -561,7 +561,7 @@
     "confirmRevokeSession": "Вы уверены, что хотите отменить эту сессию?",
     "confirmRevokeAllSessions": "Вы уверены, что хотите аннулировать все сессии для этого пользователя?",
     "failedToRevokeSessions": "Не удалось отменить сессии.",
-    "sessionsRevokedSuccessfully": "Заседания успешно отменены.",
+    "sessionsRevokedSuccessfully": "Сессии успешно отменены.",
     "linkToPasswordAccount": "Ссылка на учетную запись с паролем",
     "linkOIDCDialogTitle": "Свяжите учетную запись OIDC с учетной записью, имеющей пароль.",
     "linkOIDCDialogDescription": "Свяжите {{username}} (пользователя OIDC) с существующей учетной записью с паролем. Это позволит включить двойную аутентификацию для учетной записи с паролем.",
@@ -607,7 +607,7 @@
     "linkOIDCActionDeleteUser": "Удалите учетную запись пользователя OIDC и все его данные.",
     "linkOIDCActionAddCapability": "Добавьте возможность входа через OIDC к целевой учетной записи с паролем.",
     "linkOIDCActionDualAuth": "Разрешите учетной записи, использующей пароль, входить в систему как с помощью пароля, так и с помощью OIDC.",
-    "linkTargetUsernameLabel": "Целевой пароль, имя пользователя учетной записи",
+    "linkTargetUsernameLabel": "Имя пользователя целевой учетной записи",
     "linkTargetUsernamePlaceholder": "Введите имя пользователя и пароль учетной записи.",
     "linkAccountsButton": "Связать аккаунты",
     "linkingAccounts": "Связывание...",
@@ -867,7 +867,7 @@
     "password": "Пароль",
     "key": "Ключ",
     "credential": "Удостоверение личности",
-    "none": "Никто",
+    "none": "Нет",
     "selectCredential": "Выберите учетные данные",
     "selectCredentialPlaceholder": "Выберите учетные данные...",
     "credentialRequired": "Для аутентификации с использованием учетных данных требуются учетные данные.",
@@ -1173,7 +1173,7 @@
     "containerRemoved": "Контейнер {{error}} удален",
     "failedToRemoveContainer": "Не удалось удалить контейнер: {{name}}",
     "image": "Изображение:",
-    "idLabel": "ИДЕНТИФИКАТОР:",
+    "idLabel": "ID:",
     "ports": "Порты:",
     "noPorts": "Никто",
     "created": "Созданный:",
@@ -1416,13 +1416,13 @@
     "dragSystemFilesToUpload": "Перетащите системные файлы сюда для загрузки.",
     "dragFilesToWindowToDownload": "Перетащите файлы за пределы окна для загрузки.",
     "openTerminalHere": "Откройте терминал здесь",
-    "run": "Бегать",
+    "run": "Запустить",
     "saveToSystem": "Сохранить как...",
     "selectLocationToSave": "Выберите местоположение для сохранения.",
     "openTerminalInFolder": "Откройте Терминал в этой папке",
     "openTerminalInFileLocation": "Откройте терминал по адресу расположения файла.",
     "terminalWithPath": "Терминал - {{name}}:{{host}}",
-    "runningFile": "Бег - {{path}}",
+    "runningFile": "Запущен - {{path}}",
     "onlyRunExecutableFiles": "Можно запускать только исполняемые файлы.",
     "noHostSelected": "Хост не выбран",
     "starred": "Отмечено звездочкой",
@@ -2091,15 +2091,15 @@
     "donate": "Пожертвовать",
     "serverOverview": "Обзор сервера",
     "version": "Версия",
-    "upToDate": "До настоящего времени",
+    "upToDate": "Последняя версия",
     "updateAvailable": "Доступно обновление",
     "uptime": "Время безотказной работы",
     "database": "База данных",
-    "healthy": "Здоровый",
+    "healthy": "Исправно",
     "error": "Ошибка",
     "totalServers": "Всего серверов",
     "totalTunnels": "Всего туннелей",
-    "totalCredentials": "Полный набор учетных данных",
+    "totalCredentials": "Всего учетных данных",
     "recentActivity": "Последние события",
     "reset": "Перезагрузить",
     "loadingRecentActivity": "Загрузка последних событий...",
@@ -2112,8 +2112,8 @@
     "serverStats": "Статистика сервера",
     "loadingServerStats": "Загрузка статистики сервера...",
     "noServerData": "Данные сервера отсутствуют.",
-    "cpu": "Процессор",
-    "ram": "БАРАН",
+    "cpu": "CPU",
+    "ram": "RAM",
     "notAvailable": "Н/Д"
   },
   "rbac": {
