Update Russian localization strings

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,30 +1,30 @@
 {
   "credentials": {
-    "credentialsViewer": "Программа просмотра учетных данных",
-    "manageYourSSHCredentials": "Управляйте своими учетными данными SSH безопасно.",
-    "addCredential": "Добавить учетные данные",
-    "createCredential": "Создать учетные данные",
-    "editCredential": "Редактировать учетные данные",
-    "viewCredential": "Просмотреть учетные данные",
-    "duplicateCredential": "Дубликат учетных данных",
+    "credentialsViewer": "Просмотр реквизитов",
+    "manageYourSSHCredentials": "Управление SSH-ключами и паролями.",
+    "addCredential": "Добавить",
+    "createCredential": "Создать",
+    "editCredential": "Изменить",
+    "viewCredential": "Просмотр",
+    "duplicateCredential": "Дублировать",
     "deleteCredential": "Удалить учетные данные",
     "updateCredential": "Обновить учетные данные",
-    "credentialName": "Имя учетных данных",
+    "credentialName": "Название",
     "credentialDescription": "Описание",
     "username": "Имя пользователя",
-    "searchCredentials": "Поиск учетных данных...",
+    "searchCredentials": "Поиск...",
     "selectFolder": "Выберите папку",
     "selectAuthType": "Выберите тип аутентификации",
     "allFolders": "Все папки",
     "allAuthTypes": "Все типы авторизации",
     "uncategorized": "Без категории",
-    "totalCredentials": "Общий",
-    "keyBased": "на основе ключей",
-    "passwordBased": "на основе паролей",
+    "totalCredentials": "Всего",
+    "keyBased": "По ключу",
+    "passwordBased": "По паролю",
     "folders": "Папки",
-    "noCredentialsMatchFilters": "Учетные данные не соответствуют вашим фильтрам.",
-    "noCredentialsYet": "Учетные данные пока не созданы.",
-    "createFirstCredential": "Создайте свои первые учетные данные.",
+    "noCredentialsMatchFilters": "Ничего не найдено.",
+    "noCredentialsYet": "Список пуст.",
+    "createFirstCredential": "Создать первые реквизиты.",
     "failedToFetchCredentials": "Не удалось получить учетные данные.",
     "credentialDeletedSuccessfully": "Учетные данные успешно удалены.",
     "failedToDeleteCredential": "Не удалось удалить учетные данные.",
@@ -39,7 +39,7 @@
     "noCredentials": "Нет учетных данных",
     "noCredentialsMessage": "Вы еще не добавили учетные данные. Нажмите «Добавить учетные данные», чтобы начать.",
     "sshCredentials": "Учетные данные SSH",
-    "credentialsCount": "Учетных данных: {{count}}",
+    "credentialsCount": "Реквизитов: {{count}}",
     "refresh": "Обновить",
     "passwordRequired": "Требуется пароль",
     "sshKeyRequired": "Требуется SSH-ключ.",
@@ -94,7 +94,7 @@
     "sourceCredential": "Исходные учетные данные",
     "targetHost": "Целевой хост",
     "deploymentProcess": "Процесс развертывания",
-    "deploymentProcessDescription": "Это позволит безопасно добавить открытый ключ в файл ~/.ssh/authorized_keys целевого хоста без перезаписи существующих ключей. Операция обратима.",
+    "deploymentProcessDescription": "Безопасное добавление публичного ключа в ~/.ssh/authorized_keys на целевом хосте.",
     "chooseHostToDeploy": "Выберите хост для развертывания...",
     "deploying": "Развертывание...",
     "name": "Имя",
@@ -182,7 +182,7 @@
     "failedToDeployKey": "Не удалось развернуть SSH-ключ.",
     "clickToRenameFolder": "Нажмите, чтобы переименовать папку.",
     "renameFolder": "Переименовать папку",
-    "idLabel": "ИДЕНТИФИКАТОР:"
+    "idLabel": "ID:"
   },
   "dragIndicator": {
     "error": "Ошибка: {{error}}",
@@ -215,16 +215,16 @@
     "new": "Новый фрагмент",
     "create": "Создать фрагмент",
     "edit": "Редактировать фрагмент",
-    "run": "Бегать",
+    "run": "Запустить",
     "empty": "Пока нет фрагментов.",
     "emptyHint": "Создайте фрагмент кода для сохранения часто используемых команд.",
     "searchSnippets": "Поисковые фрагменты...",
     "name": "Имя",
     "description": "Описание",
     "content": "Команда",
-    "namePlaceholder": "например, перезапустите Nginx.",
+    "namePlaceholder": "напр., Перезагрузка Nginx",
     "descriptionPlaceholder": "Дополнительное описание",
-    "contentPlaceholder": "например, sudo systemctl restart nginx",
+    "contentPlaceholder": "напр., sudo systemctl restart nginx",
     "nameRequired": "Имя обязательно для указания.",
     "contentRequired": "Требуется команда",
     "createDescription": "Создайте новый фрагмент команды для быстрого выполнения.",
@@ -260,7 +260,7 @@
     "executeOnCurrent": "Выполнить на текущем терминале (щелкните, чтобы выбрать несколько)",
     "folder": "Папка",
     "selectFolder": "Выберите папку или оставьте поле пустым.",
-    "noFolder": "Нет папки (Без категории)",
+    "noFolder": "Без папки",
     "folderName": "Название папки",
     "folderNameRequired": "Название папки обязательно для указания.",
     "folderColor": "Цвет папки",
@@ -273,11 +273,11 @@
     "createFolderDescription": "Организуйте свои фрагменты кода по папкам."
   },
   "commandHistory": {
-    "title": "История",
+    "title": "История команд",
     "searchPlaceholder": "Поиск команд...",
     "noTerminal": "Нет активного терминала",
     "noTerminalHint": "Откройте терминал, чтобы просмотреть историю выполненных команд.",
-    "empty": "История команд пока отсутствует.",
+    "empty": "История пуста",
     "emptyHint": "Выполняйте команды в активном терминале, чтобы создать историю его работы.",
     "noResults": "Команды не найдены",
     "noResultsHint": "Команды, соответствующие \"{{query}}\", не найдены.",
@@ -292,16 +292,16 @@
   },
   "splitScreen": {
     "title": "Разделенный экран",
-    "none": "Никто",
-    "twoSplit": "Двустороннее",
-    "threeSplit": "3-сторонний",
-    "fourSplit": "4-сторонний",
+    "none": "Нет",
+    "twoSplit": "2 экрана",
+    "threeSplit": "3 экрана",
+    "fourSplit": "4 экрана",
     "availableTabs": "Доступные вкладки",
     "dragTabsHint": "Перетащите вкладки в ячейки макета ниже, чтобы назначить им соответствующие элементы.",
     "layout": "Разделенный экран",
     "dropHere": "Перетащите вкладку сюда",
     "apply": "Применить разделение",
-    "clear": "Чистое разделение",
+    "clear": "Сбросить",
     "selectMode": "Выберите режим разделенного экрана",
     "helpText": "Выберите, сколько вкладок вы хотите просматривать одновременно.",
     "success": "Режим разделенного экрана успешно применен.",
@@ -358,13 +358,13 @@
     "noUpdatesFound": "Обновлений не найдено"
   },
   "common": {
-    "close": "Закрывать",
-    "minimize": "Свести к минимуму",
+    "close": "Закрыть",
+    "minimize": "Свернуть",
     "online": "Онлайн",
     "offline": "Офлайн",
     "continue": "Продолжать",
-    "maintenance": "Обслуживание",
-    "degraded": "Частичный отказ",
+    "maintenance": "Техработы",
+    "degraded": "Сбои",
     "discord": "Discord",
     "error": "Ошибка",
     "warning": "Предупреждение",
@@ -376,10 +376,10 @@
     "connect": "Соединять",
     "connecting": "Подключение...",
     "creating": "Создание...",
-    "clear": "Прозрачный",
+    "clear": "Очистить",
     "toggleSidebar": "Переключить боковую панель",
     "sidebar": "Боковая панель",
-    "home": "Дом",
+    "home": "Главная",
     "expired": "Истекший",
     "expiresToday": "Срок действия истекает сегодня.",
     "expiresTomorrow": "Срок действия истекает через {{date}} дней",
@@ -425,10 +425,10 @@
     "email": "Электронная почта",
     "submit": "Отправить",
     "change": "Изменять",
-    "save": "Сохранять",
+    "save": "Сохранить",
     "saving": "Сохранение...",
     "delete": "Удалить",
-    "edit": "Редактировать",
+    "edit": "Изменить",
     "add": "Добавлять",
     "search": "Поиск",
     "confirm": "Подтверждать",
@@ -465,19 +465,21 @@
     "checking": "Проверка...",
     "checkingDatabase": "Проверка подключения к базе данных...",
     "actions": "Действия",
-    "remove": "Удалять",
-    "revoke": "Отменить",
-    "create": "Создавать"
+    "remove": "Удалить",
+    "revoke": "Отозвать",
+    "create": "Создавать",
+    "on": "Вкл",
+    "off": "Выкл"
   },
   "nav": {
-    "home": "Дом",
-    "hosts": "Хозяева",
-    "credentials": "Реквизиты для входа",
+    "home": "Главная",
+    "hosts": "Хосты",
+    "credentials": "Реквизиты",
     "terminal": "Терминал",
     "docker": "Docker",
     "tunnels": "Туннели",
-    "fileManager": "Файловый менеджер",
-    "serverStats": "Статистика сервера",
+    "fileManager": "Файлы",
+    "serverStats": "Статистика",
     "admin": "Администратор",
     "userProfile": "Профиль пользователя",
     "tools": "Инструменты",
@@ -489,13 +491,14 @@
     "hostManager": "Менеджер хоста",
     "cannotSplitTab": "Невозможно разделить эту вкладку",
     "tabNavigation": "Навигация по вкладкам",
-    "hostTabTitle": "{{version}}@{{username}}:{{ip}}"
+    "hostTabTitle": "{{version}}@{{username}}:{{ip}}",
+    "settings": "Настройки"
   },
   "admin": {
     "title": "Настройки администратора",
-    "oidc": "ОИДК",
+    "oidc": "OIDC",
     "users": "Пользователи",
-    "userManagement": "Управление пользователями",
+    "userManagement": "Пользователи",
     "makeAdmin": "Сделать администратором",
     "removeAdmin": "Удалить администратора",
     "deleteUser": "Удалить пользователя {{port}}? Это действие необратимо.",
@@ -561,7 +564,7 @@
     "confirmRevokeSession": "Вы уверены, что хотите отменить эту сессию?",
     "confirmRevokeAllSessions": "Вы уверены, что хотите аннулировать все сессии для этого пользователя?",
     "failedToRevokeSessions": "Не удалось отменить сессии.",
-    "sessionsRevokedSuccessfully": "Сессии успешно отменены.",
+    "sessionsRevokedSuccessfully": "Сессии успешно сброшены.",
     "linkToPasswordAccount": "Ссылка на учетную запись с паролем",
     "linkOIDCDialogTitle": "Свяжите учетную запись OIDC с учетной записью, имеющей пароль.",
     "linkOIDCDialogDescription": "Свяжите {{username}} (пользователя OIDC) с существующей учетной записью с паролем. Это позволит включить двойную аутентификацию для учетной записи с паролем.",
@@ -574,7 +577,7 @@
     "manageUser": "Управление пользователями",
     "manageUserDescription": "Управление настройками пользователей, ролями и правами доступа.",
     "authType": "Тип аутентификации",
-    "adminStatus": "Статус администратора",
+    "adminStatus": "Права админа",
     "userId": "ID пользователя",
     "regularUser": "Обычный пользователь",
     "adminPrivileges": "Права администратора",
@@ -587,10 +590,10 @@
     "passwordResetInitiated": "Инициирована перезагрузка пароля для {{username}}. Код перезагрузки отправлен.",
     "failedToResetPassword": "Не удалось инициировать сброс пароля.",
     "sessionManagement": "Управление сессиями",
-    "revokeAllSessions": "Отменить все сессии",
+    "revokeAllSessions": "Сбросить все сессии",
     "revokeAllSessionsDescription": "Принудительный выход из системы со всех устройств и сеансов.",
     "revoking": "Отмена...",
-    "revoke": "Отменить все",
+    "revoke": "Отозвать",
     "dangerZone": "Опасная зона",
     "deleteUserTitle": "Удалить учетную запись пользователя",
     "deleteUserWarning": "Удалить эту учетную запись пользователя и все связанные с ней данные безвозвратно. Это действие необратимо.",
@@ -770,14 +773,14 @@
   "hosts": {
     "title": "Менеджер хоста",
     "sshHosts": "SSH-хосты",
-    "noHosts": "Нет SSH-хостов",
+    "noHosts": "Нет хостов",
     "noHostsMessage": "Вы еще не добавили ни одного SSH-хоста. Нажмите «Добавить хост», чтобы начать.",
     "loadingHosts": "Загрузка хостов...",
     "failedToLoadHosts": "Не удалось загрузить хосты.",
     "retry": "Повторить попытку",
     "refresh": "Обновить",
     "optional": "Необязательный",
-    "hostsCount": "{{username}} хостов",
+    "hostsCount": "Хостов: {{count}}",
     "importJson": "Импорт JSON",
     "importing": "Импорт...",
     "importJsonTitle": "Импорт SSH-хостов из JSON",
@@ -797,7 +800,7 @@
     "importFailed": "Импорт не удался",
     "importError": "Ошибка импорта",
     "failedToImportJson": "Не удалось импортировать JSON-файл.",
-    "connectionDetails": "Данные подключения",
+    "connectionDetails": "Подключение",
     "organization": "Организация",
     "ipAddress": "IP-адрес",
     "port": "Порт",
@@ -808,8 +811,8 @@
     "pin": "Приколоть",
     "notes": "Примечания",
     "expirationDate": "Дата окончания срока",
-    "passwordRequired": "Для аутентификации по паролю требуется пароль.",
-    "sshKeyRequired": "Для аутентификации по ключу требуется закрытый ключ SSH.",
+    "passwordRequired": "Нужен пароль",
+    "sshKeyRequired": "Нужен SSH-ключ",
     "keyTypeRequired": "Тип ключа обязателен при использовании аутентификации по ключу.",
     "mustSelectValidSshConfig": "Необходимо выбрать допустимую конфигурацию SSH из списка.",
     "addHost": "Добавить хост",
@@ -823,14 +826,14 @@
     "savingHost": "Сохранение хоста...",
     "updatingHost": "Обновление хоста...",
     "cloningHost": "Клонирование хоста...",
-    "enableTerminal": "Включить терминал",
+    "enableTerminal": "Терминал",
     "enableTerminalDesc": "Включение/отключение видимости хоста на вкладке «Терминал»",
-    "enableTunnel": "Включить туннель",
+    "enableTunnel": "Туннель",
     "enableTunnelDesc": "Включение/отключение видимости хоста на вкладке «Туннель»",
-    "enableFileManager": "Включить файловый менеджер",
+    "enableFileManager": "Файлы",
     "enableFileManagerDesc": "Включение/отключение видимости хоста на вкладке «Файловый менеджер»",
     "enableDockerDesc": "Включение/отключение видимости хоста на вкладке Docker",
-    "enableDocker": "Включить Docker",
+    "enableDocker": "Docker",
     "defaultPath": "Путь по умолчанию",
     "defaultPathDesc": "Каталог по умолчанию при открытии файлового менеджера для этого хоста",
     "tunnelConnections": "Туннельные соединения",
@@ -877,12 +880,12 @@
     "keyPassword": "Ключ Пароль",
     "keyType": "Тип ключа",
     "autoDetect": "Автоматическое определение",
-    "rsa": "ЮАР",
+    "rsa": "RSA",
     "ed25519": "ED25519",
     "ecdsaNistP256": "ECDSA NIST P-256",
     "ecdsaNistP384": "ECDSA NIST P-384",
     "ecdsaNistP521": "ECDSA NIST P-521",
-    "dsa": "ДСА",
+    "dsa": "DSA",
     "rsaSha2256": "RSA SHA2-256",
     "rsaSha2512": "RSA SHA2-512",
     "uploadFile": "Загрузить файл",
@@ -958,7 +961,7 @@
     "statusCheckEnabledDesc": "Проверьте, находится ли сервер в сети или нет.",
     "statusCheckInterval": "Интервал проверки состояния",
     "statusCheckIntervalDesc": "Как часто следует проверять, находится ли хост в сети (от 5 секунд до 1 часа)?",
-    "metricsEnabled": "Включить мониторинг метрик",
+    "metricsEnabled": "Сбор метрик",
     "metricsEnabledDesc": "Собирайте статистику по процессору, оперативной памяти, дисковому пространству и другим параметрам системы.",
     "metricsInterval": "Интервал сбора метрик",
     "metricsIntervalDesc": "Как часто следует собирать статистику сервера (от 5 секунд до 1 часа)?",
@@ -1048,7 +1051,7 @@
     "searchServers": "Поисковые серверы...",
     "noServerFound": "Сервер не найден",
     "jumpHostsOrder": "Соединения будут устанавливаться в следующем порядке: Jump Host 1 → Jump Host 2 → ... → Target Server",
-    "socks5Proxy": "SOCKS5 Proxy",
+    "socks5Proxy": "SOCKS5 Прокси",
     "socks5Description": "Настройте SOCKS5-прокси для SSH-подключения. Весь трафик будет направляться через указанный прокси-сервер.",
     "enableSocks5": "Включить прокси SOCKS5",
     "enableSocks5Description": "Для этого SSH-соединения используйте прокси SOCKS5.",
@@ -1101,8 +1104,8 @@
     "sudoPasswordAutoFillDesc": "Автоматически предлагать ввести пароль SSH, когда команда sudo запросит пароль.",
     "sudoPassword": "Пароль Sudo",
     "sudoPasswordDesc": "Дополнительный пароль для команд sudo (полезно при аутентификации по ключу).",
-    "socks4": "НОСКИ4",
-    "socks5": "НОСКИ5",
+    "socks4": "SOCKS4",
+    "socks5": "SOCKS5",
     "executeSnippetOnConnect": "Выполнить фрагмент кода при подключении терминала.",
     "autoMosh": "Авто-МОШ",
     "autoMoshDesc": "Автоматически запускать команду MOSH при подключении",
@@ -2093,9 +2096,9 @@
     "version": "Версия",
     "upToDate": "Последняя версия",
     "updateAvailable": "Доступно обновление",
-    "uptime": "Время безотказной работы",
+    "uptime": "Аптайм",
     "database": "База данных",
-    "healthy": "Исправно",
+    "healthy": "В норме",
     "error": "Ошибка",
     "totalServers": "Всего серверов",
     "totalTunnels": "Всего туннелей",
@@ -2329,7 +2332,7 @@
     "stop": "Останавливаться",
     "pause": "Пауза",
     "unpause": "Снять с паузы",
-    "restart": "Перезапуск",
+    "restart": "Перезагрузить",
     "remove": "Удалять",
     "removeContainer": "Удалить контейнер",
     "confirmRemoveContainer": "Вы уверены, что хотите удалить контейнер \"{{name}}\"? Это действие необратимо.",
@@ -2362,11 +2365,11 @@
     "blockIo": "Блочный ввод-вывод",
     "read": "Читать",
     "write": "Писать",
-    "pids": "Идентификаторы процессов",
+    "pids": "PIDs",
     "containerInformation": "Информация о контейнере",
     "name": "Имя",
-    "id": "ИДЕНТИФИКАТОР",
-    "state": "Состояние",
+    "id": "ID",
+    "state": "Статус",
     "disconnectedFromContainer": "Отключено от контейнера",
     "containerMustBeRunning": "Для доступа к консоли контейнер должен быть запущен.",
     "authenticationRequired": "Требуется аутентификация",
@@ -2379,9 +2382,9 @@
     "failedToConnect": "Не удалось подключиться к контейнеру.",
     "console": "Консоль",
     "selectShell": "Выберите оболочку",
-    "bash": "Баш",
-    "sh": "ш",
-    "ash": "пепел",
+    "bash": "Bash",
+    "sh": "Sh",
+    "ash": "Ash",
     "connecting": "Подключение...",
     "connect": "Соединять",
     "disconnect": "Отключить",
@@ -2396,7 +2399,10 @@
     "startContainerToAccess": "Запустите контейнер, чтобы получить доступ к консоли."
   },
   "theme": {
-    "switchToLight": "Переключиться на свет",
+    "switchToLight": "Переключиться на светлый",
     "switchToDark": "Переключиться на темный"
+  },
+  "roles": {
+    "currentRoles": "Текущие роли"
   }
 }
