--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -844,7 +844,7 @@
     "failedToImportJson": "Failed to import JSON file",
     "connectionDetails": "Connection Details",
     "organization": "Organization",
-    "ipAddress": "IP Address",
+    "ipAddress": "IP Address or Hostname",
     "port": "Port",
     "name": "Name",
     "username": "Username",
@@ -2085,7 +2085,7 @@
   },
   "placeholders": {
     "enterCode": "000000",
-    "ipAddress": "127.0.0.1",
+    "ipAddress": "192.168.1.1 or example.com",
     "port": "22",
     "maxRetries": "3",
     "retryInterval": "10",
