feat: add copy deploy command for SSH keys without password auth
When password authentication is disabled on a host, the existing
Deploy SSH Key feature cannot connect to deploy keys. This adds a
"Copy Deploy Command" button that generates a pasteable shell command
for manually adding the public key via Proxmox console, IPMI, or
physical access.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -99,6 +99,10 @@
     "deploymentProcessDescription": "This will safely add the public key to the target host's ~/.ssh/authorized_keys file without overwriting existing keys. The operation is reversible.",
     "chooseHostToDeploy": "Choose a host to deploy to...",
     "deploying": "Deploying...",
+    "copyDeployCommand": "Copy Deploy Command",
+    "copyDeployCommandDescription": "Copy a shell command to manually add the public key to a host's authorized_keys file. Useful when password authentication is disabled.",
+    "deployCommandCopied": "Deploy command copied to clipboard",
+    "manualDeployInfo": "Paste this command in the target host's terminal (e.g., Proxmox console, IPMI, or physical access) to add the SSH key.",
     "name": "Name",
     "noHostsAvailable": "No hosts available",
     "noHostsMatchSearch": "No hosts match your search",
