feat: finalize opkssh based auth

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1356,6 +1356,15 @@
     "warpgateOpenBrowser": "Open in Browser",
     "warpgateContinue": "I've Completed Authentication",
     "warpgateTimeout": "Warpgate authentication timeout. Please reconnect.",
+    "opksshAuthRequired": "OPKSSH Authentication Required",
+    "opksshAuthDescription": "Complete authentication in your browser to continue. This session will remain valid for 24 hours.",
+    "opksshAuthUrl": "Authentication URL",
+    "opksshOpenBrowser": "Open Browser to Authenticate",
+    "opksshWaitingForAuth": "Waiting for authentication in browser...",
+    "opksshAuthenticating": "Processing authentication...",
+    "opksshTimeout": "Authentication timed out. Please try again.",
+    "opksshAuthFailed": "Authentication failed. Please check your credentials and try again.",
+    "opksshConfigMissing": "OPKSSH configuration not found. Please create ~/.opk/config.yml with your OIDC provider settings. See documentation: https://github.com/openpubkey/opkssh#configuration",
     "sudoPasswordPopupTitle": "Insert Password?",
     "sudoPasswordPopupHint": "Press Enter to insert, Esc to dismiss",
     "sudoPasswordPopupConfirm": "Insert",
