--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -303,7 +303,9 @@
     "createFolder": "Create Folder",
     "editFolder": "Edit Folder",
     "editFolderDescription": "Customize your snippet folder",
-    "createFolderDescription": "Organize your snippets into folders"
+    "createFolderDescription": "Organize your snippets into folders",
+    "confirmExecution": "Execute \"{{name}}\"?",
+    "confirmExecutionDesc": "Are you sure you want to execute this snippet?"
   },
   "commandHistory": {
     "title": "History",
@@ -2099,6 +2101,8 @@
     "terminalSettings": "Terminal",
     "hostSidebarSettings": "Host & Sidebar",
     "snippetsSettings": "Snippets",
+    "confirmSnippetExecution": "Confirm Snippet Execution",
+    "confirmSnippetExecutionDesc": "Show confirmation dialog before executing snippets",
     "updateSettings": "Updates",
     "disableUpdateCheck": "Disable Update Check",
     "disableUpdateCheckDesc": "Stop checking for new versions on startup and dashboard. Reduces network requests.",
