fix: credential in server stats error and browser refresh and client terminal size issue

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -502,6 +502,7 @@
     "checking": "Checking...",
     "checkingDatabase": "Checking database connection...",
     "checkingAuthentication": "Checking authentication...",
+    "backendReconnected": "Server connection restored",
     "actions": "Actions",
     "remove": "Remove",
     "revoke": "Revoke",
