feat: add overwrite option for JSON host import
- Add overwrite mode to bulk-import endpoint, matching by ip:port:username
- Import button now shows dropdown with "skip existing" and "overwrite existing" options
- Response includes created/updated/skipped/failed counts

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -849,6 +849,11 @@
     "noHostsInJson": "No hosts found in JSON file",
     "maxHostsAllowed": "Maximum 100 hosts allowed per import",
     "importCompleted": "Import completed: {{success}} successful, {{failed}} failed",
+    "importCreated": "created",
+    "importUpdated": "updated",
+    "importFailedCount": "failed",
+    "importSkipExisting": "Import (skip existing)",
+    "importOverwriteExisting": "Import (overwrite existing)",
     "importFailed": "Import failed",
     "importError": "Import error",
     "failedToImportJson": "Failed to import JSON file",
