feat: add OIDC user allowlist for registration control
Add allowed_users field to OIDC config supporting comma-separated
patterns: exact emails (user@example.com), domain suffixes
(@example.com), or empty for unrestricted access. Only new user
registrations are checked; existing users and first-user setup
are unaffected.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -601,6 +601,8 @@
     "userDeletedSuccessfully": "User {{username}} deleted successfully",
     "failedToDeleteUser": "Failed to delete user",
     "overrideUserInfoUrl": "Override User Info URL (not required)",
+    "allowedUsers": "Allowed Users",
+    "allowedUsersDescription": "Comma-separated list of allowed email patterns. Use exact emails (user@example.com), domain suffixes (@example.com), or leave empty to allow all users.",
     "failedToFetchSessions": "Failed to fetch sessions",
     "sessionRevokedSuccessfully": "Session revoked successfully",
     "failedToRevokeSession": "Failed to revoke session",
@@ -2062,6 +2064,7 @@
     "processing": "Processing...",
     "pleaseWait": "Please wait...",
     "registrationDisabled": "New account registration is currently disabled by an admin. Please log in or contact an administrator.",
+    "userNotAllowed": "Your account is not authorized to register. Please contact an administrator.",
     "databaseConnected": "Database connected successfully",
     "databaseConnectionFailed": "Failed to connect to the database server",
     "checkServerConnection": "Please check your server connection and try again",
@@ -2153,6 +2156,7 @@
     "usernameField": "name",
     "scopes": "openid email profile",
     "userinfoUrl": "https://your-provider.com/application/o/userinfo/",
+    "allowedUsers": "user@example.com, @company.com",
     "enterUsername": "Enter username to make admin",
     "searchHosts": "Search hosts by name, username, IP, folder, tags...",
     "enterPassword": "Enter your password",
