feat: add sorting controls to file manager
Add toolbar dropdown and clickable list-view column headers for sorting
files by name, date modified, or size with asc/desc toggle.
Sort preference persists via localStorage. Directories-first rule retained.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1718,7 +1718,13 @@
     "write": "Write",
     "execute": "Execute",
     "permissionsChangedSuccessfully": "Permissions changed successfully",
-    "failedToChangePermissions": "Failed to change permissions"
+    "failedToChangePermissions": "Failed to change permissions",
+    "name": "Name",
+    "sortByName": "Name",
+    "sortByDate": "Date Modified",
+    "sortBySize": "Size",
+    "ascending": "Ascending",
+    "descending": "Descending"
   },
   "tunnel": {
     "noTunnelsConfigured": "No Tunnels Configured",
