feat: add 5-panel and 6-panel split screen layouts
Refactor renderSplitOverlays from hardcoded if-case chain to a
config-driven recursive renderer. Define layouts as tree structures
(SPLIT_LAYOUTS) and render them with a single recursive function,
reducing ~280 lines to ~80 lines.

Add 5-panel (2 top + 3 bottom) and 6-panel (3x2 grid) layouts.
Raise split tab limit from 4 to 6 in TabContext. Extend sidebar
split mode UI with 5-Way and 6-Way options.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -331,6 +331,8 @@
     "twoSplit": "2-Way",
     "threeSplit": "3-Way",
     "fourSplit": "4-Way",
+    "fiveSplit": "5-Way",
+    "sixSplit": "6-Way",
     "availableTabs": "Available Tabs",
     "dragTabsHint": "Drag tabs to the layout cells below to assign them",
     "layout": "Split Screen Layout",
@@ -1304,6 +1306,8 @@
     "twoSplit": "2-Split",
     "threeSplit": "3-Split",
     "fourSplit": "4-Split",
+    "fiveSplit": "5-Split",
+    "sixSplit": "6-Split",
     "availableTabs": "Available Tabs",
     "dragTabsHint": "Drag tabs into the grid below to position them",
     "layout": "Layout",
